R7(And what?):
All sorts of shit up in here:
	!!!!!!Basically every single x,y you will see in any file is grid based. Even the drawer doesn't make a variable for a unit's x,y pixel position!!!!!!! #alwaysrememberthis
	addUnit to 1,1 rather than 32,32 //because of above
	deleted gx,gy from unit. x and y becoming grid based. Pixel value shouldn't be used.
	renamed moverelative to movepixelrelative //gets deleted in R7
	gridmoverelative to moverelative
	same with absolute versions of those.
	renamed validgridmove to validmove
	made playerMove tidier
	moveUnit in playerMove changed to moveUnitRelative 
	//need to make that function. #DONE
	moved validMoveRelative from gamelogic to unit. It wouldn't of worked if used it was used.
	drawSprites to * (x,y) of unit by gridpixel
	changed addunit,moveunit,setgridsquare,emptygridsquare a bit.
	moveunitrelative added. now calls the function IN the unit to move the units x,y position.
	Same with moveunit. 
	Added playerMoveAbsolute.
	deleting movepixelrelative - it's stupid. should only move by grid.
	deletingmovepixelabsolute - it's even more stupid. Somehow.
	added maxX and maxY variables which are set depending on size of canvas. makes some code easier to read and enables rectangular grid.
	can change moveable unit now. variable controlledUnit = 0, increased by 'a' and decreased by 's'. Stays within bounds of unitList.length. 
	can change moveable unit by clicking on it. I'm fucking amazing.
	added event listener for mouseup. The stolen part gets docx and docy which are the document coords of mouse click. the stolen function returns the position of an element (canvas). docx-elemx and docy-elemy give the coords relative to canvas.
	handlemouseclick converts pixel square clicked to grid square clicked.
	gridclicked finds the unit you clicked on from grid square clicked, if it exists and is clickable (added this bool to unit) calls clickedunit. #BREAKINGOUTOFANAMEDFORLOOPLIKEABOSS